fixed small and big menu apparition, changed hover effect for generator (lower) nav, toDo: add icons, adjust the spacing between generator nav items

--- a/components.css
+++ b/components.css
@@ -255,9 +255,15 @@ body {
   align-items: center;
   padding-left: 2rem;
 }
+.nav--generator .nav__items__list__item {
+  padding-inline: 0.75rem;
+}
+.nav--generator .nav__items__list__item:hover {
+  color: black;
+  background-color: #f2f2f3;
+}
 .nav__items {
   display: flex;
-  cursor: pointer;
   align-items: center;
 }
 .nav__items__list {
@@ -265,8 +271,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  gap: 1rem;
-  cursor: pointer;
   list-style-type: none;
   border-right: 1px solid rgba(0, 0, 0, 0.075);
   height: 0.4rem;
@@ -277,20 +281,28 @@ body {
 .nav__items__list__item {
   width: max-content;
   position: relative z-index -1;
-}
-.nav__items__list__item--big-menu {
+  cursor: pointer;
+  border-radius: 0.625rem;
+  height: 2.2rem;
+  padding-inline: 0.75rem;
   display: flex;
-  margin-top: auto;
+  align-items: center;
+}
+.nav__items__list__item--big-menu, .nav__items__list__item--small-menu {
+  display: flex;
+  align-items: center;
   position: relative;
   cursor: pointer;
   height: auto;
   width: auto;
 }
-.nav__items__list__item--big-menu:hover {
-  color: red !important;
+.nav__items__list__item--big-menu:hover, .nav__items__list__item--small-menu:hover {
+  height: 3rem;
 }
-.nav__items__list__item--big-menu:hover .big-menu {
+.nav__items__list__item--big-menu:hover .popupMenu, .nav__items__list__item--small-menu:hover .popupMenu {
   display: flex !important;
+  right: 0;
+  top: 3rem;
 }
 .nav__items__list__item--animated {
   color: #FF0099;
@@ -310,7 +322,7 @@ body {
 .nav__items__list__item:hover {
   color: #0066ff;
 }
-.nav .big-menu {
+.nav .popupMenu {
   display: none;
   cursor: pointer;
   position: absolute;
