--- a/navbar.scss
+++ b/navbar.scss
@@ -23,17 +23,25 @@
     padding-left: 2rem;
   }
 
+  &--generator {
+    .nav__items__list__item {
+      padding-inline: 0.75rem;
+      &:hover {
+        color: black;
+        background-color: v.$navBackgroundItemHover;
+      }
+    }
+  }
+
   &__items {
     display: flex;
-    cursor: pointer;
     align-items: center;
     &__list {
       padding: 1rem;
       display: flex;
       align-items: center;
       justify-content: space-around;
-      gap: 1rem;
-      cursor: pointer;
+      //gap: 1rem;
       list-style-type: none;
       border-right: 1px solid v.$separator;
       height: 0.4rem;
@@ -44,23 +52,31 @@
 
       &__item {
         width: max-content;
-        position: relative
-        z-index -1;
+        position: relative z-index -1;
+        cursor: pointer;
+        border-radius: 0.625rem;
 
-        &--big-menu {
+        height: 2.2rem;
+        padding-inline: 0.75rem;
+        display: flex;
+        align-items: center;
+
+        &--big-menu,
+        &--small-menu {
           display: flex;
-          margin-top: auto;
+          align-items: center;
           position: relative;
           cursor: pointer;
           height: auto;
           width: auto;
 
           &:hover {
+            height: 3rem;
 
-            color: red !important;
-            &  .big-menu {
+            & .popupMenu {
               display: flex !important;
-              
+              right: 0;
+              top: 3rem;
             }
           }
         }
@@ -89,11 +105,10 @@
     }
   }
 
-  .big-menu {
+  .popupMenu {
     display: none;
     cursor: pointer;
     position: absolute;
     z-index: 99;
   }
 }
-
